# cmake-examples

./: .gitignore  .travis.yml  LICENSE  README.adoc  build.sh  build_all.sh
src/: CMakeLists.txt
src/find_package_boost/: CMakeLists.txt  main.cpp
src/shared_library/: CMakeLists.txt  Foo.cpp  Foo.h
src/transitive_dependency_using_export/: CMakeLists.txt
src/transitive_dependency_using_export/App/: CMakeLists.txt  main.cpp
src/transitive_dependency_using_export/ComponentA/: CMakeLists.txt  ComponentA.cpp  ComponentA.hpp
src/transitive_dependency_using_export/ComponentB/: CMakeLists.txt  ComponentB.cpp  ComponentB.hpp
